FIX: received payment done button on mobile.

--- a/www/css/widget/payment-received-screen.css
+++ b/www/css/widget/payment-received-screen.css
@@ -40,3 +40,11 @@
     cursor: pointer;
 }
 
+@media (max-width: 600px) {
+    .payment-received-screen .done-button {
+        padding-left: 1em;
+        padding-right: 1em;
+        width: 90%;
+        box-sizing: border-box;
+    }
+}
